      the special remotes will now fail. Instead, the file has to be
      moved from one of the special remotes to the git repository, and can
      then safely be dropped from the git repository.
    - If a git remote has too old a version of git-annex-shell installed,
      git-annex won't trust it to hold onto a copy of a file when dropping
      that file from some other remote.
  * Do verification of checksums of annex objects downloaded from remotes.
  * When annex objects are received into git repositories from other git
    repos, their checksums are verified then too.
  * To get the old, faster, behavior of not verifying checksums, set
    annex.verify=false, or remote.<name>.annex-verify=false.
  * setkey, rekey: These commands also now verify that the provided file
    matches the key, unless annex.verify=false.
  * reinject: Already verified content; this can now be disabled by
    setting annex.verify=false.
  * Allow building with S3 disabled again.
  * Ported disk free space checking code to work on Solaris.
  * Windows webapp: Fix support for entering password when setting
    up a ssh remote.
  * copy --auto was checking the wrong repo's preferred content.
    (--from was checking what --to should, and vice-versa.)
    Fixed this bug, which was introduced in version 5.20150727.
  * Avoid unncessary write to the location log when a file is unlocked
    and then added back with unchanged content.
  * Debian: Add torrent library to build-depends as it's packaged now,
    and stop recommending bittornado | bittorrent.
  * Debian: Remove dependency on transformers library, as it is now
    included in ghc.

 -- Joey Hess <id@joeyh.name>  Thu, 01 Oct 2015 12:42:56 -0400

git-annex (5.20150930) unstable; urgency=medium

  * Added new linux standalone "ancient" build to support kernels
    like 2.6.32.
  * info: Don't allow use in a non-git-annex repository, since it
    uses the git-annex branch and would create it if it were missing.